--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@bessemer/cornerstone": "1.0.23",
     "@material-ui/core": "4.11.0",
     "@material-ui/icons": "4.9.1",
+    "@material-ui/lab": "4.0.0-alpha.56",
     "@reduxjs/toolkit": "1.4.0",
     "clsx": "^1.1.1",
     "dotenv": "^8.2.0",
@@ -24,7 +25,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-final-form": "6.5.1",
-    "react-redux": "7.2.1"
+    "react-redux": "7.2.1",
+    "redux-persist": "6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
